--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stellar-gbp-bridge",
+  "name": "stellar-stripe-anchor-client",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
