move concurrently out of dev deps

--- a/package.json
+++ b/package.json
@@ -4,16 +4,13 @@
   "scripts": {
     "client": "cd client && yarn start",
     "bridge": "./bridge-server/bin/bridge -c bridge.cfg",
-    "server":
-      "concurrently --kill-others-on-fail \"nodemon server.js --ignore bridge-server\" \"yarn bridge\"",
-    "dev":
-      "concurrently --kill-others-on-fail \"NODE_ENV=development yarn server\" \"yarn client\"",
-    "test":
-      "concurrently --kill-others \"yarn bridge\" \"sleep 1 && nyc mocha -R spec test/spec.js\"",
-    "setup":
-      "cp -n serverConfig.example.js serverConfig.js || true && yarn && cd client && cp -n src/clientConfig.example.js src/clientConfig.js || true && yarn && yarn build && cd ../ && git submodule update --init --recursive && cd bridge-server && go get github.com/constabulary/gb/... && gb build && cd ../ && ./bridge-server/bin/bridge -c bridge.cfg --migrate-db"
+    "server": "concurrently --kill-others-on-fail \"nodemon server.js --ignore bridge-server\" \"yarn bridge\"",
+    "dev": "concurrently --kill-others-on-fail \"NODE_ENV=development yarn server\" \"yarn client\"",
+    "test": "concurrently --kill-others \"yarn bridge\" \"sleep 1 && nyc mocha -R spec test/spec.js\"",
+    "setup": "cp -n serverConfig.example.js serverConfig.js || true && yarn && cd client && cp -n src/clientConfig.example.js src/clientConfig.js || true && yarn && yarn build && cd ../ && git submodule update --init --recursive && cd bridge-server && go get github.com/constabulary/gb/... && gb build && cd ../ && ./bridge-server/bin/bridge -c bridge.cfg --migrate-db"
   },
   "dependencies": {
+    "concurrently": "^3.5.1",
     "express": "^4.16.2",
     "log": "^1.4.0",
     "request": "^2.83.0",
@@ -21,7 +18,6 @@
     "stripe": "^5.4.0"
   },
   "devDependencies": {
-    "concurrently": "^3.5.0",
     "mocha": "^5.0.0",
     "nyc": "^11.4.1",
     "should": "^13.2.1",
