--- a/.gitignore
+++ b/.gitignore
@@ -14,15 +14,14 @@ client/build
 
 # misc
 .DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env
+.env.development
+.env.test
+.env.production
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
 # configs
-serverConfig.js
-client/src/clientConfig.js
+bridge.cfg
