--- a/package.json
+++ b/package.json
@@ -4,24 +4,40 @@
   "scripts": {
     "client": "cd client && yarn start",
     "bridge": "./bridge-server/bin/bridge -c bridge.cfg",
-    "server": "concurrently --kill-others-on-fail \"nodemon server.js --ignore bridge-server\" \"yarn bridge\"",
-    "dev": "concurrently --kill-others-on-fail \"NODE_ENV=development yarn server\" \"yarn client\"",
-    "test": "concurrently --kill-others \"yarn bridge\" \"sleep 1 && nyc mocha -R spec test/spec.js\"",
-    "setup": "cp -n serverConfig.example.js serverConfig.js || true && yarn && cd client && cp -n src/clientConfig.example.js src/clientConfig.js || true && yarn && yarn build && cd ../ && git submodule update --init --recursive && cd bridge-server && go get github.com/constabulary/gb/... && gb build && cd ../ && ./bridge-server/bin/bridge -c bridge.cfg --migrate-db"
+    "server": "concurrently --kill-others-on-fail \"ts-node server.ts --ignore bridge-server\" \"yarn bridge\"",
+    "dev": "concurrently --kill-others-on-fail \"NODE_ENV=development yarn src/server\" \"yarn client\"",
+    "test": "concurrently --kill-others \"sleep 1 && NODE_ENV=test nyc ts-mocha -R spec src/test/spec.ts\"",
+    "setup": "yarn && cd client && yarn && yarn build && cd ../ && git submodule update --init --recursive && cd bridge-server && go get github.com/constabulary/gb/... && gb build && cd ../ && ./bridge-server/bin/bridge -c bridge.cfg --migrate-db",
+    "generate:bridge.cfg": "ts-node bridge.cfg.ts"
   },
   "dependencies": {
+    "@types/express": "^4.16.0",
+    "@types/node": "^10.3.5",
+    "@types/request-promise-native": "^1.0.15",
+    "@types/stellar-sdk": "^0.8.4",
+    "@types/stripe": "^5.0.15",
+    "body-parser": "1.18.2",
     "concurrently": "^3.5.1",
+    "dotenv": "^6.0.0",
     "express": "^4.16.2",
     "log": "^1.4.0",
     "request": "^2.83.0",
     "request-promise-native": "^1.0.5",
-    "stripe": "^5.4.0"
+    "stellar-sdk": "^0.8.0",
+    "stripe": "^5.4.0",
+    "ts-node": "^7.0.0",
+    "typescript": "^2.9.2"
   },
   "devDependencies": {
+    "@types/mocha": "^5.2.4",
+    "@types/should": "^13.0.0",
+    "@types/supertest": "^2.0.5",
     "mocha": "^5.0.0",
     "nyc": "^11.4.1",
     "should": "^13.2.1",
-    "stellar-sdk": "^0.8.0",
-    "supertest": "^3.0.0"
+    "supertest": "^3.0.0",
+    "ts-mocha": "1.2.0",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.14.0"
   }
 }
